frontend/src/styles/globals.css
@import 'tailwindcss';

@font-face {
  font-family: 'Onest';
  src:
    url('/fonts/Onest-VariableFont_wght.woff2') format('woff2-variations'),
    url('/fonts/Onest-VariableFont_wght.woff2') format('woff2'),
    url('/fonts/Onest-VariableFont_wght.woff') format('woff');
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Roboto';
  src:
    url('/fonts/Roboto-VariableFont_wght.woff2') format('woff2-variations'),
    url('/fonts/Roboto-VariableFont_wght.woff2') format('woff2'),
    url('/fonts/Roboto-VariableFont_wght.woff') format('woff');
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@theme {
  --font-display: 'Onest', sans-serif;
  --font-onest: 'Onest', sans-serif;
  --font-roboto: 'Roboto', sans-serif;
  --color-primary: #681083;
  --color-text-100: #101828;
  --color-text-200: #1e2939;
  --color-text-300: #364153;
  --color-text-400: #4a5565;
  --color-text-danger: #bd3232;
  --color-bg-primary: #faf9f5;
  --color-bg-sidebar: #f5f4ed;
  --color-bg-menu: #faf9f5;
  --color-bg-danger: #ffe5e5;
  --color-bg-600: #99a1af;
  --color-bg-700: #d1d5dc;
  --color-bg-800: #e5e7eb;
  --color-bg-900: #f3f4f6;
  --color-border: #1f1e1d26;
}

.dark {
  --color-text-100: #f3f4f6;
  --color-text-200: #e5e7eb;
  --color-text-300: #d1d5dc;
  --color-text-400: #99a1af;
  --color-text-danger: #fe8181;
  --color-bg-primary: #242424;
  --color-bg-sidebar: #1f1e1d;
  --color-bg-menu: #353535;
  --color-bg-danger: #8d2727b6;
  --color-bg-600: #4a5565;
  --color-bg-700: #364153;
  --color-bg-800: #1e2939;
  --color-bg-900: #101828;
  --color-border: #4d4d4d;
}

.font-roboto {
  --font-display: 'Roboto', sans-serif;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 5rem;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(30px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideUp {
  from {
    opacity: 0;
    transform: translateY(100%);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-fade-in {
  animation: fadeIn 0.6s ease-out forwards;
}

.animate-slide-up {
  animation: slideUp 0.3s ease-out forwards;
}

.clip-custom-hero {
  clip-path: polygon(
    79% 0,
    87% 52%,
    100% 52%,
    100% 80%,
    100% 100%,
    0 100%,
    0% 80%,
    0 0
  );
}

::-webkit-scrollbar {
  width: 7px;
  height: 10px;
}

::-webkit-scrollbar-track {
  background: #313131;
}

::-webkit-scrollbar-thumb {
  background: var(--color-primary);
  border-radius: 100px;
}

::-webkit-scrollbar-thumb:hover {
  background: #410055;
}

::-webkit-scrollbar-thumb:active {
  background: #9d0bc9;
}

::selection {
  background-color: var(--color-primary);
  color: #fff;
}

/* Hide scrollbar for sidebar */
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

